<resources>
    <string name="app_name">MistplayChallenge</string>
    <string name="application_title">Application title</string>
    <string name="bonus">Bonus</string>
    <string name="chat">Chat</string>
    <string name="challenge">Challenge</string>
    <string name="category_logo">Category logo</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="check_internet">Please check your internet connection and try again.</string>
    <string name="exit_app">Are you sure you want to exit Mistplay challenge?</string>
    <string name="exit">Exit</string>
    <string name="games">Games</string>
    <string name="game_image">Game image</string>
    <string name="menu_not_implemented">is not yet implemented.Feature coming soon.</string>
    <string name="no">No</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_internet_connection_logo">No internet logo</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <string name="yes">Yes</string>

</resources>