<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_game"
        android:icon="@drawable/controller_image"
        android:title="@string/games"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/chat_bubble"
        android:title="@string/chat"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_shop"
        android:icon="@drawable/shopping_cart"
        android:title="@string/shop"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_bonus"
        android:icon="@drawable/bonus_image"
        android:title="@string/bonus"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/profile_image"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="always"/>

</menu>