<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#484747">

    <ImageView
        android:id="@+id/imageViewLogoNoConnection"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/no_internet_connection_logo"
        android:contentDescription="@string/no_internet_connection_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".3"
        />

    <TextView
        android:id="@+id/textViewMainTitleNoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoNoConnection"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_internet_connection"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintVertical_bias=".2"
        />

    <TextView
        android:id="@+id/textViewSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainTitleNoConnection"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/check_internet"
        android:paddingHorizontal="16dp"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintVertical_bias=".2"/>

</androidx.constraintlayout.widget.ConstraintLayout>